--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rennokki/plans",
+    "name": "ujjwalwahi/plans",
     "description": "Laravel Plans is a package for SaaS apps that need management over plans, features, subscriptions, events for plans or limited, countable features.",
     "keywords": [
         "eloquent",
@@ -10,7 +10,7 @@
         "model",
         "saas"
     ],
-    "homepage": "https://github.com/rennokki/plans",
+    "homepage": "https://github.com/ujjwalwahi/plans",
     "license": "MIT",
     "authors": [
         {
@@ -22,7 +22,7 @@
     ],
     "require": {
         "doctrine/dbal": "^2.8.0",
-        "laravel/framework": "~5.5.0|~5.6.0|~5.7.0",
+        "laravel/framework": "^6.0",
         "stripe/stripe-php": "^6.11.0"
     },
     "require-dev": {
