update: intergrate into new package system, payment package integeration

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "require": {
         "doctrine/dbal": "^2.8.0",
         "laravel/framework": "^6.0",
-        "stripe/stripe-php": "^6.11.0"
+        "stripe/stripe-php": "^6.11.0",
+        "vtlabs/payments": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2|^7.0",
@@ -46,7 +47,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Rennokki\\Plans\\PlansServiceProvider"
+                "Rennokki\\Plans\\PlansServiceProvider",
+                "Rennokki\\Plans\\Provider\\EventServiceProvider"
             ]
         }
     },
