fix: bug in  composer file

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "laravel": {
             "providers": [
                 "Rennokki\\Plans\\PlansServiceProvider",
-                "Rennokki\\Plans\\Provider\\EventServiceProvider"
+                "Rennokki\\Plans\\Providers\\EventServiceProvider"
             ]
         }
     },
