--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "vtlabs/payments": "v2.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.2|^7.0",
+        "phpunit/phpunit": "^8.5",
         "orchestra/testbench": "~3.5.0|~3.6.0",
         "orchestra/database": "~3.5.0|~3.6.0"
     },
